# xml-tydom

./: .travis.yml  README.md  stack.yaml
xml-tydom-conduit/: README.md  xml-tydom-conduit.cabal
xml-tydom-conduit/examples/data/: emails.xml
xml-tydom-conduit/src/Text/XML/TyDom/: Conduit.hs
xml-tydom-conduit/src/Text/XML/TyDom/Conduit/: TH.hs
xml-tydom-conduit/test/: Spec.hs
xml-tydom-conduit/test/RoundTrips/: Basics.hs
xml-tydom-conduit/test/XMLSchemas/PurchaseOrder/: Spec.hs  Types.hs
xml-tydom-core/: LICENSE  README.md  xml-tydom-core.cabal
xml-tydom-core/src/Text/XML/TyDom/Core/: Generics.hs  Types.hs  XMLInterface.hs
xml-tydom-core/src/Text/XML/TyDom/Core/Generics/: Conv.hs  FromElem.hs  ToElem.hs  Types.hs
