name:                xml-tydom-core
version:             0.1.0.0
synopsis:            Typed XML encoding (core library).
description:         Please see README.md
homepage:            https://github.com/lancelet/xml-tydom
license:             BSD3
license-file:        LICENSE
author:              Jonathan Merritt
maintainer:          j.s.merritt@gmail.com
copyright:           2017 Jonathan Merritt
category:            Text, Web, XML
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules:     Text.XML.TyDom.Core.Generics
                     , Text.XML.TyDom.Core.Generics.Conv
                     , Text.XML.TyDom.Core.Generics.FromElem
                     , Text.XML.TyDom.Core.Generics.ToElem
                     , Text.XML.TyDom.Core.Generics.Types
                     , Text.XML.TyDom.Core.Types
                     , Text.XML.TyDom.Core.XMLInterface
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , QuickCheck
                     , mtl
                     , text

source-repository head
  type:     git
  location: https://github.com/lancelet/xml-tydom
